# Sarvam-AI-Deep-research-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  scratch_test_translate.py
app/core/: config.py  logging.py
app/memory/: conversation_memory.py  db.py  repositories.py
app/models/: schema.py
app/multilingual/: __init__.py  language_detector.py  query_normalizer.py  response_localizer.py  sarvam_client.py
app/research/: agent.py  chunker.py  context_builder.py  embeddings.py  extractor.py  fetcher.py  generator.py  planner.py  retriever.py  search.py  summarizer.py  vector_store.py
app/ui/: streamlit_app.py
docs/: CODEBASE_CLEANUP_REVIEW.md  FINAL_SYSTEM_REVIEW.md  IMPLEMENTATION_PLAN.md  STAGE_1_STATUS.md  STAGE_2_STATUS.md  STAGE_3_STATUS.md  STAGE_4_STATUS.md
evaluation/: metrics.py  report_generator.py  runner.py
evaluation/dataset/: eval_questions.json
evaluation/results/: report.md  results.jsonl
tests/: test_agent_s3.py  test_agent_s4.py  test_chunk_repo.py  test_chunker.py  test_context_builder.py  test_context_builder_s3.py  test_conversation_memory.py  test_db.py  test_embeddings.py  test_extractor.py  test_fetcher.py  test_generator.py  test_metrics.py  test_multilingual.py  test_planner.py  test_react_events.py  test_report_generator.py  test_retriever.py  test_search.py  test_summarizer.py  test_vector_store.py
